<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/recommendation_dialog">

    <LinearLayout
        android:id="@+id/fofi"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_rectangle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:foregroundGravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="18sp"
            android:layout_weight="0.03"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="Recomendaciones"
            android:id="@+id/recommendation_dialog_title"/>
        <android.support.v4.view.ViewPager
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:id="@+id/recommendation_dialog_viewpager">
        </android.support.v4.view.ViewPager>
        </LinearLayout>
    <RelativeLayout
        android:id="@+id/pager"
        android:layout_width="wrap_content"
        android:layout_below="@id/fofi"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimaryDark">
        <com.synnapps.carouselview.CirclePageIndicator
            android:id="@+id/circle_indicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:paddingTop="5dp"
            android:layout_marginTop="5dp"
            android:background="@null" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/exit"
        android:paddingBottom="5dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_below="@id/pager"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <ImageView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cross"/>
    </RelativeLayout>
</RelativeLayout>