<resources>
    <string name="app_name">Isla Bolaños</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="btn_start">Iniciar Viaje</string>

    <string name="btn_recognized_geopoint">Abrir GeoPunto</string>

    <string name="creditos">\nEste  producto  ha  sido  desarrollado  por  medio  de  la  cooperación  del  Centro  de  Investigación  en Ciencias Geológicas, Museo + UCR, Escuela de Ciencias de la Computación e Informática y el Área de Conservación Guanacaste, con el fin de educar sobre el conocimiento geológico del noroeste de Costa Rica, que constituye uno de los sitios más emblemáticos y enmar
        \n
        <b><big>Créditos</big></b>\n
...
