...
        </LinearLayout>

    </LinearLayout>


    <io.github.yavski.fabspeeddial.FabSpeedDial
        android:id="@+id/fab_speed_dial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabGravity="bottom_end"
        app:touchGuard="false"
        app:fabMenu="@menu/speed_dial_button"
...
