<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_centerHorizontal="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="15sp"
        android:text=""
        android:id="@+id/recommendation_fragment_text"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:id="@+id/recommendation_fragment_image"
        android:padding="10dp"/>
</LinearLayout>